# OOP_Labs_3sem

./: README.md  tests.cpp
.devcontainer/: Dockerfile  devcontainer.json
laba1var1/: CMakeLists.txt  extract_numbers.cpp  extract_numbers.h  main.cpp  tests.cpp
laba2var9/: CMakeLists.txt  eleven.h  main.cpp  tests.cpp
laba3var13/: CMakeLists.txt  main.cpp  tests.cpp
laba3var13/include/: Vector.h  figure.h  hexagon.h  pentagon.h  point.h  rhomb.h
laba3var13/src/: Vector.cpp  hexagon.cpp  pentagon.cpp  point.cpp  rhomb.cpp
laba4var13/: CMakeLists.txt  Vector.h  figure.h  hexagon.h  main.cpp  pentagon.h  point.h  rhomb.h  tests.cpp
laba5var9/: CMakeLists.txt  main.cpp  tests.cpp
laba5var9/include/: CustomList.h  FixedMemoryResource.h
laba5var9/src/: FixedMemoryResource.cpp
laba6var5/: CMakeLists.txt  main.cpp  tests.cpp
laba6var5/include/: NPC.hpp  bear.hpp  factory.hpp  observer.hpp  thug.hpp
laba6var5/src/: NPC.cpp  bear.cpp  factory.cpp  observer.cpp  thug.cpp  werewolf.cpp
src/: FixedMemoryResource.cpp
